tests/paczka1/fuzzy1/60600763.err
Error in line 1: JsQ7WtNc A785 43,9
Error in line 6: JsQ7WtNc S760 0,0
Error in line 7: S760 A785 2,2
Error in line 9: JsQ7WtNc A154 64,7
Error in line 11: JsQ7WtNc A156 90,4
Error in line 30: MKR4PK77 I785 19,9
Error in line 24: NeDsu0wbg S760 0,8
Error in line 28: MKR4PK77 S760 566,8
Error in line 20: S760 A154 39,0
Error in line 33: MKR4PK77 A785 57,7
